<resources>
    <string name="app_name">Vorentoe</string>
    <string name="aish"><i>Vorentoe</i></string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="loading">Never apologize for being a powerful amazing woman!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Q1"><b>Ques 1:How are you feeling these days?</b></string>
    <string name="Q2"><b>Ques 2:How do you feel when you are not able to achieve           your goals?</b></string>
    <string name="Q3"><b>>Ques 3:How do you react to criticism?</b></string>
    <string name="Q4"><b>>Ques 4:How healthy are you physically?</b></string>
    <string name="Q5"><b>>Ques 5:How comfortable are you interacting with the others?</b></string>
    <string name="Q6"><b>>Ques 6:Do you love everything about yourself?</b></string>
    <string name="Q7"><b>>Ques 7:Do you consider yourself to have a low,average or high interpersonal IQ?</b></string>
    <string name="Q8"><b>>Ques 8:How you rate your confidence level?</b></string>
    <string name="Q9"><b>>Ques 9:Do you experience sibling rivalry? </b></string>
    <string name="Q10"><b>>Ques 10:What do you generally do after a bad day?</b></string>
    <string name="Q11"><b>>Ques 11:Do you ever feel like giving up on someone or something in life?</b></string>
    <string name="Q12"><b>>Ques 12:How would you rate your eating habits?</b></string>
    <string name="Q13"><b>>Ques 13:What kind of people you think you are surrounded with?</b></string>
    <string name="Q14"><b>>Ques 14:Do you exercise adequately ?</b></string>
    <string name="Q15"><b>>Ques 15:How much does money effect your happiness?</b></string>`
</resources>
